--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: LabThings
 description: > # this means to ignore newlines until "baseurl:"
   The open platform for connected laboratory instruments
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://labthings.org" # the base hostname & protocol for your site
 
 # Markdown settings
 markdown: kramdown
